if GCC_PCH
AM_CXXFLAGS = -Winvalid-pch -include allsys.h
endif

# this has all of the subdirectories that make will recurse into.  if
# there are none, comment this out
#SUBDIRS =

# this is the program that gets installed.  it's name is used for all
# of the other Makefile.am variables
bin_PROGRAMS = kid3

# set the include path for X, qt and KDE
INCLUDES = $(all_includes)

# the library search path. 
kid3_LDFLAGS = $(KDE_RPATH) $(all_libraries)

# the libraries to link against.
if CONFIG_USE_KDE
kid3_LDADD   = $(LIB_KFILE) $(LIB_TUNEPIMP) $(LIB_VORBIS) $(LIB_FLAC)
else
kid3_LDADD   = $(LIB_QT) $(LIB_TUNEPIMP) $(LIB_VORBIS) $(LIB_FLAC)
endif

# which sources should be compiled for kid3
kid3_SOURCES = filelist.cpp framelist.cpp genres.cpp id3form.cpp kid3.cpp main.cpp mp3file.cpp standardtags.cpp configdialog.h configdialog.cpp exportdialog.h exportdialog.cpp formatconfig.h formatconfig.cpp formatbox.h formatbox.cpp importdialog.h importdialog.cpp importselector.h importselector.cpp importparser.h importparser.cpp generalconfig.h generalconfig.cpp importconfig.h importconfig.cpp miscconfig.h miscconfig.cpp freedbdialog.h freedbdialog.cpp freedbconfig.h freedbconfig.cpp freedbclient.h freedbclient.cpp rendirdialog.h rendirdialog.cpp dirlist.cpp taggedfile.cpp mp3framelist.cpp musicbrainzdialog.h musicbrainzdialog.cpp musicbrainzconfig.h musicbrainzconfig.cpp musicbrainzclient.h musicbrainzclient.cpp numbertracksdialog.h numbertracksdialog.cpp oggfile.cpp oggframelist.cpp vcedit.c flacfile.cpp flacframelist.cpp commandstable.cpp

# these headers are automatically built
BUILT_SOURCES =
CLEANFILES = allsys.h allsys.h.gch

# these are the headers for your project that won't be installed
noinst_HEADERS = configdialog.h exportdialog.h filelist.h formatbox.h formatconfig.h framelist.h freedbclient.h freedbconfig.h freedbdialog.h generalconfig.h genres.h id3form.h importconfig.h importdialog.h importparser.h importselector.h kid3.h miscconfig.h mp3file.h rendirdialog.h standardtags.h dirlist.h taggedfile.h mp3framelist.h musicbrainzclient.h musicbrainzconfig.h musicbrainzdialog.h numbertracksdialog.h oggfile.h oggframelist.h vcedit.h flacfile.h flacframelist.h commandstable.h

# additional files in distribution
EXTRA_DIST = kid3.desktop kid3ui.rc hi16-app-kid3.png hi32-app-kid3.png hi48-app-kid3.png de_qt.po ru_qt.po kid3.dsp kid3.dsw kid3win.rc kid3.ico kid3.mak config.mk

# generate precompiled header allsys.h.gch for GCC 3.4
pch:
	echo "/* automatically generated by Makefile */" >allsys.h
	echo "#ifndef ALLSYS_H" >>allsys.h
	echo "#define ALLSYS_H" >>allsys.h 
if CONFIG_USE_KDE
	cat $(patsubst %,$(srcdir)/%,$(kid3_SOURCES)) | grep "#include *<" | grep -v "\(winsock\|sys/utime\|tunepimp\)" | sort | uniq >>allsys.h 
else
	cat $(patsubst %,$(srcdir)/%,$(kid3_SOURCES)) | grep "#include *<" | grep -v "\(winsock\|sys/utime\|tunepimp\|<k\)" | sort | uniq >>allsys.h 
endif
	echo "#endif" >>allsys.h 
	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) -Winvalid-pch $(CXXFLAGS) $(KDE_CXXFLAGS) allsys.h
	echo "#error precompiled header not used!" >>allsys.h

# let automoc handle all of the meta source files (moc)
METASOURCES = AUTO

messages: rc.cpp
	$(XGETTEXT) *.cpp -o $(podir)/kid3.pot

KDE_ICON = kid3

# this is where the kdelnk file will go 
xdg_apps_DATA = kid3.desktop

# this is where the XML-GUI resource file goes
rcdir = $(kde_datadir)/kid3
rc_DATA = kid3ui.rc
